Overflow issue fixed

--- a/style.css
+++ b/style.css
@@ -13,6 +13,7 @@ body {
   line-height: 1.5em;
   background-color: #333;
   color: white;
+  overflow-x: hidden;
 }
 
 header {
